--- a/src/BudgetBuddy.Infrastructure/BudgetBuddy.Infrastructure.csproj
+++ b/src/BudgetBuddy.Infrastructure/BudgetBuddy.Infrastructure.csproj
@@ -1,7 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\BudgetBuddy.Domain\BudgetBuddy.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
