--- a/tests/BudgetBuddy.Tests/BudgetBuddy.Tests.csproj
+++ b/tests/BudgetBuddy.Tests/BudgetBuddy.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
@@ -29,6 +29,11 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\BudgetBuddy.Domain\BudgetBuddy.Domain.csproj" />
+    <ProjectReference Include="..\..\src\BudgetBuddy.App\BudgetBuddy.App.csproj" />
   </ItemGroup>
 
 </Project>
