--- a/src/BudgetBuddy.Infrastructure/BudgetBuddy.Infrastructure.csproj
+++ b/src/BudgetBuddy.Infrastructure/BudgetBuddy.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BudgetBuddy.Domain\BudgetBuddy.Domain.csproj" />
+    <ProjectReference Include="..\BudgetBuddy.App\BudgetBuddy.App.csproj" />
   </ItemGroup>
 
   <ItemGroup>
