--- a/src/BudgetBuddy.App/BudgetBuddy.App.csproj
+++ b/src/BudgetBuddy.App/BudgetBuddy.App.csproj
@@ -2,6 +2,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BudgetBuddy.Domain\BudgetBuddy.Domain.csproj" />
+    <ProjectReference Include="..\BudgetBuddy.Infrastructure\BudgetBuddy.Infrastructure.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
